[workspace]
resolver = "2"
members = [
    "cz",
    "pak_explorer",
    "luca_pak", "utils", "luca_script",
]

[workspace.dependencies]
byteorder = "1.5"

[workspace.package]
authors = ["G2"]

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.production]
inherits = "release"
lto = true
strip = true
codegen-units = 1
panic = "abort"
