[package]
name = "cz"
edition = "2021"
version = "0.1.2"
description="""
An encoder/decoder for CZ# image files used in the LUCA System engine by
Prototype Ltd.
"""
license = "MIT"
authors.workspace = true

[features]
png = ["dep:image"]

[dependencies]
byteorder = "1.5"
thiserror = "1.0"
imagequant = "4.3"
rgb = "0.8"

# Only active on PNG feature
image = { version = "0.25", optional = true }

[lints]
workspace = true
