[package]
name = "cz"
edition = "2021"
version = "0.1.3"
description="""
An encoder/decoder for CZ# image files used in the LUCA System engine by
Prototype Ltd.
"""
license = "MIT"
authors.workspace = true

[dependencies]
byteorder = { workspace = true }
thiserror = "2.0"
imagequant = "4.3"
rgb = "0.8"

[lints]
workspace = true
