[package]
name = "experimental"
description = """
A package for experimentation, not for publishing
"""
version = "0.1.0"
edition = "2021"
authors.workspace = true
publish = false

[dependencies]
cz = { path = "../cz/", features = ["png"] }
eframe = { version = "0.28.1", default-features = false, features = ["wayland", "x11", "accesskit", "default_fonts", "wgpu"] }
egui_extras = "0.28.1"
luca_pak = { path = "../luca_pak/" }
rfd = "0.14.1"

[lints]
workspace = true
