[package]
name = "luca_pak"
edition = "2021"
version = "0.1.0"
description = """
A crate for parsing and modifying PAK files from the LUCA System engine by
Prototype Ltd.
"""
license = "MIT"
authors.workspace = true

[[bin]]
name = "pakutil"
path = "src/main.rs"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.8", features = ["derive"] }
log = "0.4.22"
thiserror = "1.0.61"

[lints]
workspace = true
