[package]
name = "luca_pak"
edition = "2021"
version = "0.1.2"
description = """
An encoder/decoder for PAK archive files used in the LUCA System engine by
Prototype Ltd.
"""
license = "MIT"
authors.workspace = true

[dependencies]
byteorder = "1.5.0"
log = "0.4.22"
thiserror = "1.0.61"

[lints]
workspace = true
