[package]
name = "luca_pak"
edition = "2021"
version = "0.1.3"
description = """
An encoder/decoder for PAK archive files used in the LUCA System engine by
Prototype Ltd.
"""
license = "MIT"
authors.workspace = true

[dependencies]
byteorder-lite = "0.1"
log = "0.4"
thiserror = "2.0"

[lints]
workspace = true
