[package]
name = "pak_explorer"
edition = "2021"
version = "0.1.2"
description = """
A simple GUI for exploring and making modifications to LUCA System PAK files.
"""
license = "GPL-3.0-or-later"
authors.workspace = true
publish = false

[dependencies]
colog = "1.3.0"
cz = { path = "../cz/" }
eframe = { version = "0.29", default-features = false, features = ["wayland", "x11", "accesskit", "default_fonts", "wgpu"] }
egui_extras = "0.29"
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4.22"
luca_pak = { path = "../luca_pak/" }
rfd = "0.15"

[lints]
workspace = true
