[package]
name = "pak_explorer"
edition = "2024"
version = "0.1.3"
description = """
A simple GUI for exploring and making modifications to LUCA System PAK files.
"""
license = "GPL-3.0-or-later"
authors.workspace = true
publish = false

[dependencies]
colog = "1.3"
cz = { path = "../cz/" }
eframe = { version = "0.32", default-features = false, features = ["wayland", "x11", "accesskit", "default_fonts", "glow", "persistence"] }
egui_extras = "0.32"
image = { version = "0.25", default-features = false, features = ["png"] }
kira = "0.10"
log = "0.4"
luca_pak = { path = "../luca_pak/" }
rfd = "0.15"
symphonia = "0.5"
wgpu = "25"

[lints]
workspace = true
