[package]
name = "pak_explorer"
edition = "2024"
version = "0.1.3"
description = """
A simple GUI for exploring and making modifications to LUCA System PAK files.
"""
license = "GPL-3.0-or-later"
authors.workspace = true
publish = false
build = "../assets/build_logos.rs"


[dependencies]
colog = "1.3"
cz = { path = "../cz/" }
eframe = { version = "0.33", default-features = false, features = ["wayland", "x11", "accesskit", "default_fonts", "glow"] }
egui_extras = "0.33"
image = { version = "0.25", default-features = false, features = ["png"] }
kira = "0.10"
log = "0.4"
luca_pak = { path = "../luca_pak/" }
rfd = "0.15"
symphonia = "0.5.4"

[build-dependencies]
resvg = "0.45"
usvg = "0.45"

[lints]
workspace = true

[package.metadata.generate-rpm]
assets = [
    { source = "../target/release/pak_explorer", dest = "/usr/bin/pak_explorer", mode = "755" },
    { source = "../assets/dev.g2games.pak_explorer.desktop", dest = "/usr/share/applications/dev.g2games.pak_explorer.desktop", mode = "644" },
    { source = "../assets/small_logo.png", dest = "/usr/share/icons/hicolor/dev.g2games.pak_explorer.png", mode = "644" },
]
