[package]
name = "utils"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors.workspace = true
build = "build.rs"

[[bin]]
name = "czutil"

[[bin]]
name = "pakutil"

[dependencies]
cz = { path = "../cz/", features = ["png"] }
luca_pak = { path = "../luca_pak/" }

image = { version = "0.25", default-features = false, features = ["png"] }
clap = { version = "4.5", features = ["derive", "error-context"] }

[build-dependencies]
vergen-gix = { version = "1.0", features = ["build", "cargo", "rustc", "si"] }

[lints]
workspace = true
