[package]
name = "lbee-utils"
version = "0.2.1"
edition = "2021"
license = "GPL-3.0-or-later"
authors.workspace = true
build = "build.rs"

[[bin]]
name = "czutil"

[[bin]]
name = "pakutil"

[dependencies]
cz = { path = "../cz/" }
luca_pak = { path = "../luca_pak/" }
image = { version = "0.25", default-features = false, features = ["png"] }
clap = { version = "4.5", features = ["derive", "error-context"] }
owo-colors = "4.1"

[build-dependencies]
vergen-gix = { version = "1.0", features = ["build", "cargo", "rustc", "si"] }

[lints]
workspace = true
