[package]
name = "lbee-utils"
version = "0.2.1"
edition = "2024"
license = "GPL-3.0-or-later"
authors.workspace = true
build = "build.rs"

[[bin]]
name = "czutil"

[[bin]]
name = "pakutil"

[dependencies]
cz = { path = "../cz/" }
luca_pak = { path = "../luca_pak/" }
image = { version = "0.25", default-features = false, features = ["png"] }
clap = { version = "4.5", features = ["derive", "error-context"] }
owo-colors = "4.1"
env_logger = "0.11.10"

[build-dependencies]
vergen-gix = { version = "9.1.0", features = ["build", "cargo", "rustc", "si"] }
vergen = "9.1.0"

[lints]
workspace = true
